Restructerd folders of numdifftools

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,6 @@
-recursive-include numdifftools *.tex *.pdf *.py
+include versioneer.py
+include *.txt
+include *.rst
+include tox.ini
+recursive-include numdifftools *.py *.c *.h *.pxd *.pyx
+recursive-include docs *.rst *.py *.tex *.pdf
