--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,28 @@
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
 
 language: python
-
 python:
-  - "2.7_with_system_site_packages"
-  - "3.2_with_system_site_packages"
-
+  - 2.7
+  - 3.3
+notifications:
+  email: false
+ 
+# Setup anaconda
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+  # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
+  - sudo rm -rf /dev/shm
+  - sudo ln -s /run/shm /dev/shm
+# Install packages
+install:
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose pytest
+  # Coverage packages are on my binstar channel
+  - conda install --yes -c dan_blanchard python-coveralls nose-cov
 before_script:
-  # add ppa with more recent scipy version
-  - sudo add-apt-repository ppa:pylab/stable  -y
-  - sudo apt-get update -qq
-  - sudo apt-get install -y python-sphinx python-nose python-numpy python-scipy
-  - sudo apt-get install -y python3-sphinx python3-nose python3-numpy python3-scipy
   - git config --global user.email "per.andreas.brodtkorb@gmail.com"
   - git config --global user.name "pbrod"
 script:
