--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,7 @@
 # .coveragerc to control coverage.py
 [run]
 branch = True
-source = numdifftools
+source = git_numdifftools
 omit = */_version.py
 
 [report]
