--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist = py27
 skip_missing_interpreters = True
 
 [testenv]
-changedir = tests
+changedir = -r{toxinidir}/numdifftools/tests
 commands =
      py.test {posargs}
 deps =
@@ -22,8 +22,8 @@ deps = flake8
 commands = flake8 setup.py numdifftools tests
 
 # Options for flake8
-[flake8]
-exclude = numdifftools/_version.py
+#[flake8]
+#exclude = numdifftools/_version.py
 
 # Options for pytest
 [pytest]
