--- a/setup.cfg
+++ b/setup.cfg
@@ -12,12 +12,12 @@ package_data =
 data_files = *.rst, *.txt
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
-CLASSIFIERS = "Development Status :: 4 - Beta",
-              "Programming Language :: Python",
-              "Intended Audience :: Education",
-              "Intended Audience :: Science/Research",
-              "Operating System :: OS Independent",
-              "Topic :: Scientific/Engineering :: Mathematics"
+CLASSIFIERS = Development Status :: 4 - Beta,
+              Programming Language :: Python,
+              Intended Audience :: Education,
+              Intended Audience :: Science/Research,
+              Operating System :: OS Independent,
+              Topic :: Scientific/Engineering :: Mathematics
 
 
 [console_scripts]
