Updated structure in setup according to pyscaffold version 2.4.2

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,54 +1,90 @@
 [metadata]
-description = 'Solves automatic numerical differentiation problems in one or more variables.'
+name = "numdifftools"
+summary = 'Solves automatic numerical differentiation problems in one or more variables.'
 author = pbrod
 author_email = per.andreas.brodtkorb(at)gmail.com
-license = "new-bsd"
-url = "https://github.com/pbrod/numdifftools/"
-# Comma separated list of data INSIDE your package to include.
-# DO NOT prepend the package name when specifying files and folders.
-package_data = 
-# Comma separated list of data OUTSIDE your package to include.
-# Equivalent to adding files to MANIFEST.in which is not needed.
-data_files = *.rst, *.txt
+license = new BSD
+home-page = "https://github.com/pbrod/numdifftools/"
+description-file = README.rst
+
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
-CLASSIFIERS = Development Status :: 4 - Beta,
+classifiers = Development Status :: 4 - Beta,
               Programming Language :: Python,
+              Programming Language :: Python :: 2.7,
+              Programming Language :: Python :: 3,
+              Programming Language :: Python :: 3.3,
+              Programming Language :: Python :: 3.4,
+              Environment :: Console,
               Intended Audience :: Education,
               Intended Audience :: Science/Research,
+              License :: OSI Approved :: BSD License,
               Operating System :: OS Independent,
+              Operating System :: POSIX :: Linux,
+              Operating System :: Unix,
+              Operating System :: MacOS,
+              Operating System :: Microsoft :: Windows
               Topic :: Scientific/Engineering :: Mathematics
 
-
-[console_scripts]
+[entry_points]
 # Add here console scripts like:
-# hello_world = numdifftools.module:function
+# console_scripts = 
+#       run_my_project = my_project.cli:run
+# as well as other entry_points.
 
-[data_files]
-# Add here data to be included which lies OUTSIDE your package, e.g.
-# path/to/destination = files/to/include, others/to/include
-# This is the same as adding files to MANIFEST.in which is not needed anymore.
-# The destination is relative to the root of your virtual environment.
-# Use ** as wildcard if you want to recursively include a pattern, e.g.
-# tests/**.py would include all py-files in all subfolders of tests.
-share/numdifftools = *.rst, *.txt
+[files]
+# Add here 'data_files', 'packages' or 'namespace_packages'.
+# Additional data files are defined as key value pairs of source and target:
+packages = 
+     numdifftools
+data_files = 
+     share/numdifftools/docs = docs/*
 
-[extras_require]
+[extras]
 # Add here additional requirements for extra features, like:
-# PDF = ReportLab>=1.2, RXP
+# PDF = 
+#    ReportLab>=1.2
+#    RXP
+
+[test]
+# py.test options when running `python setup.py test`
+addopts = tests
 
 [pytest]
 # Options for py.test:
 # Specify command line options as you would do when invoking py.test directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
-addopts = tests
+addopts = 
     --cov numdifftools --cov-report term-missing
     --verbose
 
 [aliases]
-test = pytest
+docs = build_sphinx
+# test = pytest
 
 [bdist_wheel]
 # Use this option if your package is pure-python
 universal = 1
+
+
+[build_sphinx]
+# Options for Sphinx build
+source_dir = docs
+build_dir = docs/_build
+
+[pbr]
+# Let pbr run sphinx-apidoc
+autodoc_tree_index_modules = True
+# autodoc_tree_excludes = ...
+# Let pbr itself generate the apidoc
+# autodoc_index_modules = True
+# autodoc_exclude_modules = ...
+# Convert warnings to errors
+# warnerrors = True
+
+[devpi:upload]
+# Options for the devpi: PyPI serer and packaging tool
+# VCS export must be deactivated since we are using setuptools-scm
+no-vcs = 1
+format = bdist_wheel
