--- a/docs/Makefile
+++ b/docs/Makefile
@@ -85,17 +85,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/git_numdifftools.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/numdifftools.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/git_numdifftools.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/numdifftools.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $HOME/.local/share/devhelp/git_numdifftools"
-	@echo "# ln -s $(BUILDDIR)/devhelp $HOME/.local/share/devhelp/git_numdifftools"
+	@echo "# mkdir -p $HOME/.local/share/devhelp/numdifftools"
+	@echo "# ln -s $(BUILDDIR)/devhelp $HOME/.local/share/devhelp/numdifftools"
 	@echo "# devhelp"
 
 epub:
