Updated setup.cfg and deleted duplicate tests folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ data_files =
 
 [test]
 # py.test options when running `python setup.py test`
-addopts = tests
+addopts = numdifftools/tests
 
 [pytest]
 # Options for py.test:
