--- a/appveyor.yml
+++ b/appveyor.yml
@@ -107,9 +107,9 @@ install:
   # target Python version and architecture
   - "%CMD_IN_ENV% pip install -r requirements.txt"
 
-build_script: false
+build_script:
   # Build the compiled extension
-  # - "%CMD_IN_ENV% python setup.py build"
+  - "%CMD_IN_ENV% python setup.py build"
 
 test_script:
   # Run the project tests
