Updated README.rst and CHANGES.rst

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = "numdifftools"
+name = numdifftools
 summary = 'Solves automatic numerical differentiation problems in one or more variables.'
 author = pbrod
 author_email = per.andreas.brodtkorb(at)gmail.com
