updated README.rst and .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
   #- sudo ln -s /run/shm /dev/shm
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pytest pip
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib pytest
   - pip install coveralls
 before_script:
   - git config --global user.email "per.andreas.brodtkorb@gmail.com"
@@ -33,7 +33,6 @@ before_script:
 script:
   - coverage run --source=numdifftools setup.py test
 after_success:
-  - coveralls
   - if [[ "$COVERAGE" == "true" ]]; then coveralls || echo "failed"; fi
 cache:
   - apt
