--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,12 @@ before_install:
     fi
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
+  - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
+      export PATH=/home/travis/miniconda2/bin:$PATH
+    else
+      export PATH=/home/travis/miniconda3/bin:$PATH
+    fi
   - conda update --yes conda
-# The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
-  - sudo rm -rf /dev/shm
-  - sudo ln -s /run/shm /dev/shm
-
   - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
   - conda install --yes -n condaenv pip
   - source activate condaenv
