--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ before_install:
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
   - if [[ "$TRAVIS_PYTHON_VERSION" == "2.7" ]]; then
-      export PATH=/home/travis/miniconda2/bin:$PATH
+      export PATH=/home/travis/miniconda2/bin:$PATH;
     else
-      export PATH=/home/travis/miniconda3/bin:$PATH
+      export PATH=/home/travis/miniconda3/bin:$PATH;
     fi
   - conda update --yes conda
   - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
