Updated README.rst + setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,22 +9,22 @@ description-file = README.rst
 
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
-classifiers = Development Status :: 4 - Beta,
-              Programming Language :: Python,
-              Programming Language :: Python :: 2.7,
-              Programming Language :: Python :: 3,
-              Programming Language :: Python :: 3.3,
-              Programming Language :: Python :: 3.4,
-              Environment :: Console,
-              Intended Audience :: Education,
-              Intended Audience :: Science/Research,
-              License :: OSI Approved :: BSD License,
-              Operating System :: OS Independent,
-              Operating System :: POSIX :: Linux,
-              Operating System :: Unix,
-              Operating System :: MacOS,
-              Operating System :: Microsoft :: Windows
-              Topic :: Scientific/Engineering :: Mathematics
+classifier = Development Status :: 4 - Beta
+             Programming Language :: Python
+             Programming Language :: Python :: 2.7
+             Programming Language :: Python :: 3
+             Programming Language :: Python :: 3.3
+             Programming Language :: Python :: 3.4
+             Environment :: Console
+             Intended Audience :: Education
+             Intended Audience :: Science/Research
+             License :: OSI Approved :: BSD License
+             Operating System :: OS Independent
+             Operating System :: POSIX :: Linux
+             Operating System :: Unix
+             Operating System :: MacOS
+             Operating System :: Microsoft :: Windows
+             Topic :: Scientific/Engineering :: Mathematics
 
 [entry_points]
 # Add here console scripts like:
