--- a/setup.cfg
+++ b/setup.cfg
@@ -28,36 +28,50 @@ classifier = Development Status :: 4 - Beta
 
 [entry_points]
 # Add here console scripts like:
-# console_scripts = 
+# console_scripts =
 #       run_my_project = my_project.cli:run
 # as well as other entry_points.
 
 [files]
 # Add here 'data_files', 'packages' or 'namespace_packages'.
 # Additional data files are defined as key value pairs of source and target:
-packages = 
+packages =
      numdifftools
-data_files = 
+data_files =
      share/numdifftools/docs = docs/*
 
 [extras]
 # Add here additional requirements for extra features, like:
-# PDF = 
+# PDF =
 #    ReportLab>=1.2
 #    RXP
 
 [test]
 # py.test options when running `python setup.py test`
-addopts = numdifftools/tests
+addopts = numdifftools
+          numdifftools/tests
 
 [pytest]
+doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 # Options for py.test:
 # Specify command line options as you would do when invoking py.test directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
-addopts = 
+addopts =
     --cov numdifftools --cov-report term-missing
     --verbose
+    --doctest_modules
+    --pep8
+
+norecursedirs =
+    .*
+    _build
+    docs
+    tmp*
+
+pep8ignore =
+    tests/*.py ALL
+    info.py ALL
 
 [aliases]
 docs = build_sphinx
