--- a/tox.ini
+++ b/tox.ini
@@ -27,4 +27,17 @@ commands = flake8 setup.py numdifftools tests
 
 # Options for pytest
 [pytest]
-addopts = -rsxXf
+doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
+addopts =
+    -rsxXf
+    --doctest-modules
+    --pep8
+norecursedirs =
+    .*
+    _build
+    docs
+    tmp*
+
+pep8ignore =
+    tests/*.py ALL
+    info.py ALL
