--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,9 @@ envlist = py27
 skip_missing_interpreters = True
 
 [testenv]
+setenv =
+    DISPLAY = :0
+sitepackages = True
 changedir = -r{toxinidir}/numdifftools/tests
 commands =
      py.test {posargs}
