Added Programming Language :: Python :: 3.5

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ classifier = Development Status :: 4 - Beta
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.3
              Programming Language :: Python :: 3.4
+             Programming Language :: Python :: 3.5
              Environment :: Console
              Intended Audience :: Education
              Intended Audience :: Science/Research
