--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = 'Solves automatic numerical differentiation problems in one or more va
 author = pbrod
 author_email = per.andreas.brodtkorb(at)gmail.com
 license = new BSD
-home-page = "https://github.com/pbrod/numdifftools/"
+home-page = 'https://github.com/pbrod/numdifftools'
 description-file = README.rst
 
 # Add here all kinds of additional classifiers as defined under
