--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest matplotlib
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest matplotlib pyqt
   - pip install coveralls
   - pip install codecov
   - pip install hypothesis
