--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,7 +32,8 @@ install:
   - conda info -a
   - conda install --yes conda-build
   - conda config --add channels https://conda.anaconda.org/omnia
-  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest matplotlib pip pyqt"
+  - conda config --add channels https://conda.anaconda.org/qttesting
+  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest matplotlib pip pyqt=5.6.0"
 
   - activate test-environment
   - pip install coverage
