--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,8 +32,7 @@ install:
   - conda info -a
   - conda install --yes conda-build
   - conda config --add channels https://conda.anaconda.org/omnia
-  - conda config --add channels https://conda.anaconda.org/qttesting
-  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest matplotlib pip pyqt=5.6.0"
+  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest matplotlib pip"
 
   - activate test-environment
   - pip install coverage
