--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,12 @@ before_install:
   - conda create --yes -n condaenv python=$TRAVIS_PYTHON_VERSION
   - conda install --yes -n condaenv pip
   - conda config --add channels https://conda.anaconda.org/omnia
+  - conda config --add channels https://conda.anaconda.org/qttesting
   - conda config --add channels https://conda.anaconda.org/pbrod
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest matplotlib
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest pyqt matplotlib
   - pip install coveralls
   - pip install codecov
   - pip install hypothesis
