--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest pyqt matplotlib
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest pyqt=4 matplotlib
   - pip install coveralls
   - pip install codecov
   - pip install hypothesis
