--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,17 @@
 # Travis configuration file using the build matrix feature
 # Read more under http://docs.travis-ci.com/user/build-configuration/
 # THIS SCRIPT IS SUPPOSED TO BE AN EXAMPLE. MODIFY IT ACCORDING TO YOUR NEEDS!
-sudo: false
+dist: trusty
+sudo: required
+
+addons:
+  sonarqube:
+    token:
+      secure: "67bcbf1aefb992993fdd45b78fb4977a05be39b9"
+jdk:
+  - oraclejdk8
+
+#sudo: false
 language: python
 python:
   - 2.7
@@ -50,8 +60,13 @@ before_script:
   - git config --global user.name "pbrod"
 script:
   - coverage run --source=numdifftools setup.py test
+  - sonar-scanner
+
 after_success:
   - coveralls
   - codecov
 cache:
   - apt
+  directories:
+    - '$HOME/.sonar/cache'
+
