Added link to travis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.language=python
 sonar.sourceEncoding=UTF-8
 
 sonar.links.homepage=https://github.com/pbrod/numdifftools
-sonar.links.ci=https://travis-ci.org/SonarSource/sq-com_example_standard-sqscanner-travis
+sonar.links.ci=https://travis-ci.org/pbrod/numdifftools
 sonar.links.scm=https://github.com/pbrod/numdifftools
 sonar.links.issue=https://github.com/pbrod/numdifftools/issues
 
