--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 sonar.sources=numdifftools
 
 # Language
-sonar.language=python
+sonar.language=py
 
 # Encoding of the source files
 sonar.sourceEncoding=UTF-8
@@ -17,4 +17,6 @@ sonar.links.ci=https://travis-ci.org/pbrod/numdifftools
 sonar.links.scm=https://github.com/pbrod/numdifftools
 sonar.links.issue=https://github.com/pbrod/numdifftools/issues
 
-sonar.tests=numdifftools/tests
+# sonar.tests=numdifftools/tests
+sonar.login=67bcbf1aefb992993fdd45b78fb4977a05be39b9
+sonar.host.url=https://sonarqube.com
