--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,3 +20,20 @@ sonar.links.issue=https://github.com/pbrod/numdifftools/issues
 # sonar.tests=numdifftools/tests
 sonar.login=67bcbf1aefb992993fdd45b78fb4977a05be39b9
 sonar.host.url=https://sonarqube.com
+
+
+# Unit tests
+sonar.python.xunit.reportPath=test-reports/*.xml
+sonar.python.coverage.reportPath=coverage.xml
+
+# Integration tests
+sonar.python.coverage.itReportPath=it-coverage.xml
+
+# Turn off these rules
+sonar.issue.ignore.multicriteria=e1,e2
+# python:s100: "Method names should comply with a naming convention" gives many false positives when overriding
+# TestCase methods (such as setUp and tearDown) in test files.
+sonar.issue.ignore.multicriteria.e1.ruleKey=python:S100
+sonar.issue.ignore.multicriteria.e1.resourceKey=tests/**/test*.py
+sonar.issue.ignore.multicriteria.e2.ruleKey=python:S100
+sonar.issue.ignore.multicriteria.e2.resourceKey=tests/integrationtests/**/test*.py
