Added .pylintrc + pep8

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -34,6 +34,6 @@ sonar.issue.ignore.multicriteria=e1,e2
 # python:s100: "Method names should comply with a naming convention" gives many false positives when overriding
 # TestCase methods (such as setUp and tearDown) in test files.
 sonar.issue.ignore.multicriteria.e1.ruleKey=python:S100
-sonar.issue.ignore.multicriteria.e1.resourceKey=tests/**/test*.py
+sonar.issue.ignore.multicriteria.e1.resourceKey=numdifftools/tests/test*.py
 sonar.issue.ignore.multicriteria.e2.ruleKey=python:S100
-sonar.issue.ignore.multicriteria.e2.resourceKey=tests/integrationtests/**/test*.py
+sonar.issue.ignore.multicriteria.e2.resourceKey=numdifftools/tests/integrationtests/**/test*.py
