--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -22,6 +22,8 @@ sonar.login=67bcbf1aefb992993fdd45b78fb4977a05be39b9
 sonar.host.url=https://sonarqube.com
 
 
+sonar.python.pylint_config=.pylintrc
+
 # Unit tests
 sonar.python.xunit.reportPath=test-reports/*.xml
 sonar.python.coverage.reportPath=coverage.xml
