added pylint to travis

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -23,6 +23,8 @@ sonar.host.url=https://sonarqube.com
 
 
 sonar.python.pylint_config=.pylintrc
+sonar.python.pylint.reportPath=pylint-report.txt	
+
 
 # Unit tests
 sonar.python.xunit.reportPath=test-reports/*.xml
