Updated setup.py in a attempt to get upload to pypi working again.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = numdifftools
-summary = 'Solves automatic numerical differentiation problems in one or more variables.'
+summary = Solves automatic numerical differentiation problems in one or more variables.
 author = pbrod
 author_email = per.andreas.brodtkorb(at)gmail.com
 license = new BSD
-home-page = 'https://github.com/pbrod/numdifftools'
+home-page = https://github.com/pbrod/numdifftools
 description-file = README.rst
 
 # Add here all kinds of additional classifiers as defined under
