Updated the author email address in order for twine to be able to upload to pypi.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = numdifftools
 summary = Solves automatic numerical differentiation problems in one or more variables.
 author = pbrod
-author_email = per.andreas.brodtkorb(at)gmail.com
+author_email = per.andreas.brodtkorb@gmail.com
 license = new BSD
 home-page = https://github.com/pbrod/numdifftools
 description-file = README.rst
