--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,7 +33,7 @@ install:
   - conda install --yes conda-build
   - conda config --add channels https://conda.anaconda.org/omnia
   - conda config --add channels https://conda.anaconda.org/qttesting
-  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pyqt=4 matplotlib pip"
+  - "conda create -q -n test-environment python=%PYTHON_VERSION% numpy scipy algopy pytest pyqt=4 matplotlib pip statsmodels"
 
   - activate test-environment
   - pip install coverage
