--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ classifier = Development Status :: 4 - Beta
 packages =
      numdifftools
 data_files =
-     share/numdifftools/docs = docs/*
+     share/numdifftools/docs = docs/_build/html/*
 
 [extras]
 # Add here additional requirements for extra features, like:
@@ -52,7 +52,7 @@ data_files =
 addopts = numdifftools
           numdifftools/tests
 
-[pytest]
+[tool:pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 # Options for py.test:
 # Specify command line options as you would do when invoking py.test directly.
@@ -99,7 +99,7 @@ autodoc_tree_index_modules = True
 # warnerrors = True
 
 [devpi:upload]
-# Options for the devpi: PyPI serer and packaging tool
+# Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
 no-vcs = 1
 format = bdist_wheel
