updated doctest in nd_scipy.py and profiletools.py install line_profiler on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ before_install:
   - source activate condaenv
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest statsmodels
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy algopy pytest statsmodels line_profiler
   - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6" ]]; then
       conda install --yes pyqt=5 matplotlib;
     else
