--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
 addopts =
     -rsxXf
     --doctest-modules
+    --pep8
 
 norecursedirs =
     .*
