Disable broken doctests

--- a/tox.ini
+++ b/tox.ini
@@ -31,12 +31,13 @@ commands = flake8 setup.py numdifftools tests
 # Options for pytest
 [pytest]
 doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
+
 addopts =
-    -rsxXf
-    --doctest-modules
+    -rsx
 
 norecursedirs =
     .*
+    conda_recipe
     _build
     docs
     tmp*
