--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.links.issue=https://github.com/pbrod/numdifftools/issues
 
 # sonar.tests=numdifftools/tests
 sonar.login=67bcbf1aefb992993fdd45b78fb4977a05be39b9
-sonar.host.url=https://sonarqube.com
+sonar.host.url=https://sonarcloud.io
 
 sonar.python.pylint=/usr/local/bin/pylint
 sonar.python.pylint_config=.pylintrc
