include LICENSE.txt in distributions

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ author_email = per.andreas.brodtkorb@gmail.com
 license = new BSD
 home-page = https://github.com/pbrod/numdifftools
 description-file = README.rst
+license-file = LICENSE.txt
 
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
