Updated project path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=Python :: Numdifftools
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=numdifftools
+sonar.sources=src/numdifftools
 
 # Language
 sonar.language=py
